[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/military/fort/castle.png" type="Texture" id=1]
[ext_resource path="res://asset/military/fort/fort.gd" type="Script" id=2]
[ext_resource path="res://asset/ui/icons/castle.png" type="Texture" id=3]
[ext_resource path="res://asset/military/flag/flag.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/InputManager.gd" type="Script" id=5]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://asset/ui/bar/bar_circle.png" type="Texture" id=7]
[ext_resource path="res://asset/military/fort/highlight.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 150.801

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 150.636, 120.572 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.782, -276.798 ), Vector2( 1.782, -280 ), Vector2( 1.782, -320 ), Vector2( 1.782, -280 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("highlight_sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1.2, 1.2 ) ]
}

[node name="fort" type="RigidBody2D"]
mode = 1
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="input_detection" type="Node" parent="."]
script = ExtResource( 5 )

[node name="garrison_holder" type="Node2D" parent="."]
position = Vector2( 0.369637, 243.794 )

[node name="dead_body_holder" type="Node2D" parent="."]
position = Vector2( 0.369637, 243.794 )

[node name="highlight_sprite" type="Sprite" parent="."]
position = Vector2( 4, 50 )
scale = Vector2( 1.07334, 1.07334 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="flag" parent="." instance=ExtResource( 4 )]
position = Vector2( -48.5, 1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.24493, 10.1022 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 9.89949 )
shape = SubResource( 2 )

[node name="burning_holder" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1.782, -284.006 )
scale = Vector2( 1.6, 1.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="garrison_text" type="Label" parent="Sprite2"]
margin_left = -33.0624
margin_top = 32.6124
margin_right = 36.9376
margin_bottom = 72.6124
custom_fonts/font = ExtResource( 6 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="garrison_ballance_progress" type="TextureProgress" parent="Sprite2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -25.0
margin_right = -25.0
margin_bottom = -25.0
value = 90.0
texture_progress = ExtResource( 7 )
fill_mode = 5
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="training_time" type="Timer" parent="."]
one_shot = true

[node name="timer_fort_checking" type="Timer" parent="."]
autostart = true

[node name="shooting_point" type="Position2D" parent="."]
position = Vector2( 86.6614, -14.0962 )

[node name="shot_delay" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
bus = "sfx"

[node name="disable_physic_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fort_iddle"
anims/fort_iddle = SubResource( 3 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="training_time" to="." method="_on_training_time_timeout"]
[connection signal="timeout" from="timer_fort_checking" to="." method="_on_timer_fort_checking_timeout"]
[connection signal="timeout" from="disable_physic_timer" to="." method="_on_disable_physic_timer_timeout"]
